test: add service unit tests